# albertoursino.github.io

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  pyproject.toml
.dvc/: config
static/styles/: home.css
webapp/: db.sqlite3.dvc  manage.py  requirements.txt
webapp/.ebextensions/: django.config
webapp/ursinoalberto/: apps.py  urls.py  views.py
webapp/ursinoalberto/static/ursinoalberto/javascripts/: home.js
webapp/ursinoalberto/static/ursinoalberto/styles/: base.css  home.css  keyframes.css  resume.css
webapp/ursinoalberto/templates/ursinoalberto/: bachelor_thesis.html  base.html  home.html  master_thesis.html  resume.html
webapp/webapp/: asgi.py  settings.py  settings_dev.py  urls.py  wsgi.py
