[tool.poetry]
name = "ursinoalberto"
version = "0.1.0"
description = "Personal website"
authors = ["Alberto Ursino"]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
django = "^5.0"
loguru = "^0.7.2"
poethepoet = "^0.27.0"
awsebcli = "^3.20.10"
pre-commit = "^3.7.1"
django-livereload-server = "^0.5.1"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
# Same as Black.
line-length = 88
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D104", "D100", "ARG001"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.poe.tasks]
# Django
runserver = "python webapp/manage.py runserver 8003 --settings=webapp.settings_dev"
migrate = "python webapp/manage.py migrate"
makemigrations = "python webapp/manage.py makemigrations"
createsuperuser = "python webapp/manage.py createsuperuser"
collect = "python webapp/manage.py collectstatic"
# pre-commit
runall = "pre-commit run --all-files"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
